--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,8 +6,9 @@
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.mathematics": "1.2.1",
+    "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.24",
-    "com.unity.textmeshpro": "3.0.1",
+    "com.unity.textmeshpro": "2.1.6",
     "com.unity.toolchain.macos-x86_64-linux-x86_64": "0.1.21-preview",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
